k8s/shared/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shared-ingress
  labels:
    app.kubernetes.io/instance: insta
  annotations:
    dev.okteto.com/generate-host: "true"
spec:
  rules:
    - http:
        paths:
          - path: /api
            backend:
              serviceName: api-service
              servicePort: 80
          - path: /
            backend:
              serviceName: echo-service
              servicePort: 80
